--- a/src/components/OrderBook/index.css
+++ b/src/components/OrderBook/index.css
@@ -1,9 +1,8 @@
 .order-book {
   width: 100%;
-  max-width: 1024px;
-  margin: 0 auto;
-  padding: 0 15px;
   table-layout: fixed;
+  border: 1px solid black;
+  border-collapse: collapse;
 }
 
 .currency-pair {
@@ -28,5 +27,4 @@
 }
 
 .order-data.size {
-  text-align: left;
 }
