--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: opensans,sans-serif,btcglyph;
+  background: #15232c;
+  color: white;
 }
